@@ -25,6 +25,7 @@ const float FADE_AMOUNT = 0.7f;
 const int REPLAY_VERSION = 3;
 const float REPLAY_TIME_INCREMENT = 0.1f;
 const int REPLAY_DISPLAY_COUNT = 20;
+const int REPLAY_SCROLL_AMOUNT = 5;
 const int STATS_VERSION = 0;
 const int STATS_MAXSCORES = 10;
 const float ORB_GLOWSIZE = 2.5f;
