@@ -1,4 +1,5 @@
 irrlamb 0.2.1 -
+- Redesigned replay screen
 - Added installer for windows
 - Can selectively enable gamepads in config file
 - Added per-axis deadzone to config
